# Slience_cutter

./: .gitignore  LICENSE  PRIVACY.md  README.md  README_CN.md  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: setup-sidecars.mjs
src/: App.jsx  index.html  main.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: mod.rs  system.rs  upload.rs  video_processing.rs
src-tauri/src/utils/: mod.rs  sidecar.rs
src-tauri/src/video/: mod.rs
src/components/: ExportProgressModal.jsx  IntensitySlider.jsx  LeftPanel.jsx  LoadingScreen.jsx  MainInterface.jsx  PaddingSlider.jsx  PreviewSection.jsx  RightPanel.jsx  SegmentsList.jsx  ThresholdSlider.jsx  Timeline.jsx  TransportBar.jsx  WaveformSection.jsx
src/hooks/: useTimelineModel.js
src/modules/: file-handler.js  i18n.jsx  state-manager.js  tauri-manager.js  timeline-logic.js  translations.js  uploader.js  utils.js  video-player.js
