# src-tauri/Cargo.toml
[package]
name = "silence-cutter"
version = "0.1.0"
description = "A tool to remove silence from videos"
authors = ["You"]
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
tempfile = "3.8"
chrono = "0.4"
rand = "0.8"
which = "5.0"
regex = "1.10"
base64 = "0.21"
once_cell = "1.18"
tauri-plugin-fs = "2.0"
percent-encoding = "2.3"
tauri-plugin-shell = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lib]
name = "silence_cutter"
path = "src/lib.rs"
